--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.5",
     "tailwindcss": "^3.2.7",
+    "tailwindcss-animate": "^1.0.5",
     "vite": "^4.0.0"
   }
 }
